# bot

./: README.md
description/: package.xml  setup.py
description/launch/: display_model.launch.py  display_navigation.launch.py  display_odom.launch.py  display_slam.launch.py
description/rviz/: display_config.rviz  display_navigation.rviz
description/urdf/: robot.urdf
driver/: package.xml  setup.py
driver/driver/: cmd_vel_encryptor.py  cmd_vel_teleop.py  encoders.py  main_controller.py  motor_controller.py  motor_driver.py  motor_test.py.save  new_motor_encoder_driver.py  regulator.py
driver/launch/: driver.launch.py  motors.launch.py
navigation/: package.xml  setup.py
navigation/config/: nav2_params.yaml
navigation/navigation/: map_publisher.py
odometry/: package.xml  setup.py
odometry/odometry/: odom.py
pc/description/: CMakeLists.txt  package.xml
pc/description/launch/: display_model.launch  display_movement.launch  display_navigation.launch  display_slam.launch
pc/description/rviz/: display_model.rviz
pc/description/urdf/: base.xacro  left_wheel.xacro  right_wheel.xacro
pc/navigation/: package.xml
pc/navigation/config/: costmap_common.yaml
pc/slam/: package.xml
rpi/base/: CMakeLists.txt  package.xml
rpi/control/: CMakeLists.txt  package.xml
rpi/description/: CMakeLists.txt  package.xml
rpi/description/launch/: main.launch
rpi/description/urdf/: caster_wheel.xacro  matherials.xacro  sensors.xacro
slam/: setup.py
slam/config/: slam_toolbox_params.yaml
slam/launch/: slam.launch.py
slam/slam/: slam.py
(+7 files in other folders)
